# DualIndex

./: .gitignore  CMakeLists.txt  README.md  convert_data.cpp  graph_mock_demo.py  myqueries.txt  run_zmindex_all.sh
bench/: bench_art_baseline.cpp  bench_flood_k_sensitivity.cpp  bench_flood_sortsource.cpp  bench_flood_wiki.cpp  bench_router.cpp  bench_zmindex_all.cpp  bench_zmindex_graph_queries.cpp  bench_zmindex_wv.cpp  parity_check.cpp  query.hpp
docs/: EXPERIMENTS.md
generate_data/: 3d_50k.py  3d_50k_graph_paths.csv  add_tpie_header.py  create_test_data.py  csv_to_bin.py
generate_data/scripts/out_dense_3d/: dense_3d_with_offset.csv
indexes/: base_index.hpp  router.hpp
indexes/learned/: flood_sortsource.hpp  zmindex.hpp
scripts/: compare_art_vs_learned.py  fig_best_vs_art_bars.py  fig_k_inversion.py  fig_stock_k_vs_art.py  fig_synthetic_bars.py  generate_thesis_figures.py  pivot_synthetic.py  plot_k_sensitivity.py  sweep_synthetic.sh
tools/: txt_to_tpie.cpp
tools/datasets/true_3d_learned_index/: csv_to_tpie_true3d.cpp
utils/: common.hpp
